--- a/camunda-client/Cargo.toml
+++ b/camunda-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["OpenAPI Generator team and contributors"]
 
 [dependencies]
-serde = "^1.0"
+serde = "1.0.118"
 serde_derive = "^1.0"
 serde_json = "^1.0"
 url = "1.5"
