--- a/veda-camunda-external-task/Cargo.toml
+++ b/veda-camunda-external-task/Cargo.toml
@@ -6,18 +6,13 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-rusty_v8 = "0.14.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_derive = "1.0"
-serde_json = "^1.0"
+serde_json = "1.0"
+
+v_module = { package = "v-common-module", version = "0.1.22" }
+v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.22" }
+v_v8 = { package = "v-common-v8", version = "0.1.27" }
 
 camunda_client = { path = "../camunda-client" }
-
-v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
-v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
-v_v8 = { git = "https://github.com/semantic-machines/v-common-v8.git" }
-v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
-v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
-v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
-v_ft_xapian = { git = "https://github.com/semantic-machines/v-common-ft-xapian.git" }
