--- a/veda-nano-bpmn/Cargo.toml
+++ b/veda-nano-bpmn/Cargo.toml
@@ -17,9 +17,9 @@ indextree = "4.2.0"
 nanoid = "0.3.0"
 
 v_queue = "0.1"
+v_onto = { package = "v-common-onto", version = "0.1.1" }
+v_api = { package = "v-common-api", version = "0.1.2" }
+v_storage = { package = "v-common-storage", version = "0.1.2" }
+v_module = { package = "v-common-module", version = "0.1.5" }
+v_v8 = { package = "v-common-v8", version = "0.1.3" }
 
-v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
-v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
-v_v8 = { git = "https://github.com/semantic-machines/v-common-v8.git" }
-v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
-v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
