add module veda-camunda-user-task

--- a/veda-camunda-plugin/pom.xml
+++ b/veda-camunda-plugin/pom.xml
@@ -15,6 +15,13 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.sm</groupId>
+      <artifactId>vqueue-binding</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>org.camunda.bpm</groupId>
       <artifactId>camunda-engine</artifactId>
@@ -60,4 +67,29 @@
       <url>https://app.camunda.com/nexus/content/groups/public</url>
     </repository>
   </repositories-->
+    <build>
+                <plugins>
+                        <plugin>
+                                <artifactId>maven-dependency-plugin</artifactId>
+                                <version>2.0</version>
+                                <executions>
+                                        <execution>
+                                                <id>copy-dependencies</id>
+                                                <phase>package</phase>
+                                                <goals>
+                                                        <goal>copy-dependencies</goal>
+                                                </goals>
+                                                <configuration>
+                                                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                                        <includeScope>runtime</includeScope>
+                                                        <overWriteIfNewer>true</overWriteIfNewer>
+                                                        <silent>true</silent>
+                                                </configuration>
+                                        </execution>
+                                </executions>
+                        </plugin>
+
+                </plugins>
+        </build>
+
 </project>
