--- a/veda-camunda-plugin/pom.xml
+++ b/veda-camunda-plugin/pom.xml
@@ -3,8 +3,8 @@
   <groupId>com.semanticmachines.veda.bpm</groupId>
   <artifactId>veda-camunda-plugin</artifactId>
   <version>0.0.1</version>
-  <name>Veda Caminda Parse Listener Plugin</name>
-  <description>Parse listener plugin for camunda BPM user tasks to export them to Veda platform</description>
+  <name>Veda Camunda Parse Listener Plugin</name>
+  <description>Parse listener plugin for Camunda BPM user tasks and processes to sync them with Veda</description>
 
   <properties>
     <version.camunda>7.14.0</version.camunda>
