--- a/veda-camunda-event-handler/Cargo.toml
+++ b/veda-camunda-event-handler/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "veda-camunda-external-task"
+name = "veda-camunda-event-handler"
 version = "0.1.0"
 authors = ["Itiua <ValeriyBushenev@gmail.com>"]
 edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4"
@@ -10,6 +12,9 @@ lazy_static = "1.4.0"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_derive = "1.0"
 serde_json = "1.0"
+scan_fmt = "0.2.6"
+
+v_queue = "0.1"
 
 v_module = { package = "v-common-module", version = "0.1.24" }
 v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.25" }
@@ -17,4 +22,3 @@ v_v8 = { package = "v-common-v8", version = "0.1.31" }
 
 camunda_client = { path = "../camunda-client" }
 v_camunda_common = { path = "../v-camunda-common" }
-
