--- a/veda-camunda-process-controller/Cargo.toml
+++ b/veda-camunda-process-controller/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "veda-camunda-connector"
+name = "veda-camunda-process-controller"
 version = "0.1.0"
 authors = ["Itiua <ValeriyBushenev@gmail.com>"]
 edition = "2018"
