--- a/veda-camunda-process-controller/Cargo.toml
+++ b/veda-camunda-process-controller/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 serde_json = "1.0"
-
+uuid = { version = "0.8", features = ["serde", "v4"] }
 v_queue = "0.1"
-
 v_module = { package = "v-common-module", version = "0.1.26" }
-
 camunda_client = { path = "../camunda-client" }
