--- a/v-camunda-common/Cargo.toml
+++ b/v-camunda-common/Cargo.toml
@@ -18,8 +18,8 @@ serde_json = "1.0"
 
 v_queue = "0.1"
 
-v_module = { package = "v-common-module", version = "0.1.22" }
-v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.22" }
-v_v8 = { package = "v-common-v8", version = "0.1.27" }
+v_module = { package = "v-common-module", version = "0.1.31" }
+v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.32" }
+v_v8 = { package = "v-common-v8", version = "=0.1.38" }
 
 camunda_client = { path = "../camunda-client" }
