--- a/veda-camunda-external-task-worker/Cargo.toml
+++ b/veda-camunda-external-task-worker/Cargo.toml
@@ -14,9 +14,9 @@ scan_fmt = "0.2.6"
 
 v_queue = "0.1.7"
 
-v_module = { package = "v-common-module", version = "0.1.31" }
-v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.32" }
-v_v8 = { package = "v-common-v8", version = "=0.1.38" }
+v_module = { package = "v-common-module", version = "=0.1.39" }
+v_ft_xapian = { package = "v-common-ft-xapian", version = "=0.1.43" }
+v_v8 = { package = "v-common-v8", version = "=0.1.52" }
 
 camunda_client = { path = "../camunda-client" }
 v_camunda_common = { path = "../v-camunda-common" }
