--- a/veda-camunda-process-controller/Cargo.toml
+++ b/veda-camunda-process-controller/Cargo.toml
@@ -9,5 +9,5 @@ log = "0.4"
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 v_queue = "0.1.7"
-v_module = { package = "v-common-module", version = "0.1.31" }
+v_module = { package = "v-common-module", version = "=0.1.39" }
 camunda_client = { path = "../camunda-client" }
