--- a/v-camunda-common/Cargo.toml
+++ b/v-camunda-common/Cargo.toml
@@ -16,10 +16,9 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_derive = "1.0"
 serde_json = "1.0"
 
-v_queue = "0.1.7"
+v_queue = "0.1.9"
 
-v_module = { package = "v-common-module", version = "=0.1.47" }
-v_ft_xapian = { package = "v-common-ft-xapian", version = "=0.1.49" }
-v_v8 = { package = "v-common-v8", version = "=0.1.64" }
+v_v8 = { package = "v-common-v8", version = "=0.1.70" }
+#v_v8 = { package = "v-common-v8", path = "../../v-common-v8" }
 
 camunda_client = { path = "../camunda-client" }
