--- a/veda-camunda-external-task-worker/Cargo.toml
+++ b/veda-camunda-external-task-worker/Cargo.toml
@@ -12,11 +12,10 @@ serde_derive = "1.0"
 serde_json = "1.0"
 scan_fmt = "0.2.6"
 
-v_queue = "0.1.7"
+v_queue = "=0.1.9"
 
-v_module = { package = "v-common-module", version = "=0.1.47" }
-v_ft_xapian = { package = "v-common-ft-xapian", version = "=0.1.49" }
-v_v8 = { package = "v-common-v8", version = "=0.1.64" }
+#v_v8 = { package = "v-common-v8", path = "../../v-common-v8" }
+v_v8 = { package = "v-common-v8", version = "=0.1.70" }
 
 camunda_client = { path = "../camunda-client" }
 v_camunda_common = { path = "../v-camunda-common" }
