--- a/veda-camunda-process-controller/Cargo.toml
+++ b/veda-camunda-process-controller/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 log = "0.4"
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
-v_queue = "0.1.7"
 
-v_module = { package = "v-common-module", version = "=0.1.47" }
+v_queue = "=0.1.9"
+
+#v_common = { package = "v-common",  path = "../../v-common" }
+v_common = { package = "v-common", version = "=0.1.55" }
+
 camunda_client = { path = "../camunda-client" }
